# mima.rs

./: .gitignore  Cargo.toml  TODO.md  flake.nix  mima.example.toml  module.nix  package.nix  rust.nix  try-nix-build
.github/workflows/: ci.yml
nix/: darwin-module.nix  nixos-module.nix  package.nix  rust.nix
src/: command.rs  lib.rs  main.rs
src/app/: disk.rs  guest.rs  guest_connection.rs  host_connection.rs  mod.rs  network.rs  network_interface.rs  snapshot.rs  ssh_connection.rs
src/app/commands/: apply_snapshot.rs  check_snapshot.rs  connect_to_guest.rs  copy_file_to_guest.rs  create_snapshot.rs  delete_snapshot.rs  execute_file_on_guest.rs  execute_script_on_guest.rs  initialize_guest.rs  list_guests.rs  list_snapshots.rs  mod.rs  show_guest_details.rs  (+3 more)
src/errors/: command_execution_failed_error.rs  duplicate_snapshot_error.rs  forbidden_remote_execution_error.rs  invalid_file_error.rs  missing_configuration_error.rs  missing_dependencies_error.rs  missing_input_path_or_stdin_error.rs  missing_ip_address_configuration_error.rs  mod.rs  monitor_command_error.rs  parent_folder_creation_error.rs  parse_command_output_error.rs  parse_configuration_error.rs  parse_stream_error.rs  process_execution_error.rs  read_configuration_error.rs  set_permissions_error.rs  unknown_guest_error.rs  unknown_network_error.rs  unknown_snapshot_error.rs
tests/: apply_snapshot.rs  check_snapshot.rs  cli_tests.rs  command_execution_failed_error.rs  copy_file_to_guest.rs  create_snapshot.rs  delete_snapshot.rs  duplicate_snapshot_error.rs  execute_file_on_guest.rs  execute_script_on_guest.rs  help.rs  initialize_guest.rs  invalid_file_error.rs  list_guests.rs  list_snapshots.rs  missing_configuration_error.rs  missing_dependencies_error.rs  missing_ip_address_configuration_error.rs  monitor_command_error.rs  parent_folder_creation_error.rs  parse_command_output_error.rs  parse_configuration_error.rs  parse_stream_error.rs  process_execution_error.rs  read_configuration_error.rs  set_permissions_error.rs  show_guest_details.rs  start_guest.rs  stop_guest.rs  unknown_guest_error.rs  unknown_network_error.rs  unknown_snapshot_error.rs  wait_for_guest_to_shutdown.rs
tests/cmd/: help.stdout  help.toml  print_version.stdout  print_version.toml
tests/env/: mod.rs
tests/stubs/: scp  ssh
(+410 files in other folders)
