[package]
name = "mima"
version = "0.6.0"
authors = ["Igor Sidorov <igor.sidorov@binarycode.ru>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = { version = "3.0.14", features = ["derive"] }
colored = "2"
command-macros = { version = "0.2.9", features = ["nightly"] }
indoc = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tabwriter = "1.2.1"
toml = "0.5"

[dev-dependencies]
assert_cmd = "1.0.3"
assert_fs = "1.0.2"
merge-yaml-hash = "0.2.0"
predicates = "1.0.8"
predicates-core = "1.0.2"
serde_yaml = "0.8"
