[package]
name = "mima"
version = "0.18.0"
authors = ["Igor Sidorov <igor.sidorov@binarycode.ru>"]
edition = "2021"
rust-version = "1.63"
description = "Virtual environments manager"
readme = "README.md"
repository = "https://github.com/binarycode/mima.rs"
license = "MIT"

[dependencies]
anyhow = "1.0.57"
clap = { version = "3.2.5", features = ["derive"] }
colored = "2.0.0"
command-macros = { version = "0.2.9", features = ["nightly"] }
indoc = "1.0.6"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
tabwriter = "1.2.1"
time = { version = "0.3.11", features = ["formatting"] }
toml = "0.5.9"
trycmd = "0.14.0"

[dev-dependencies]
assert_cmd = "2.0.4"
assert_fs = "1.0.7"
merge-yaml-hash = "0.2.0"
predicates = "2.1.1"
predicates-core = "1.0.3"
serde_yaml = "0.8.24"
