[package]
name = "mima"
version = "0.27.0"
authors = ["Igor Sidorov <igor.sidorov@binarycode.ru>"]
edition = "2021"
rust-version = "1.63"
description = "Virtual environments manager"
readme = "README.md"
repository = "https://github.com/binarycode/mima.rs"
license = "MIT"

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.11", features = ["derive"] }
colored = "2.0.4"
command-macros = { version = "0.2.9", features = ["nightly"] }
indoc = "2.0.2"
serde = { version = "1.0.166", features = ["derive"] }
serde_json = "1.0.100"
tabwriter = "1.2.1"
time = { version = "0.3.22", features = ["formatting"] }
toml = "0.7.6"
trycmd = "0.14.16"

[dev-dependencies]
assert_cmd = "2.0.13"
assert_fs = "1.1.1"
merge-yaml-hash = "0.4.0"
predicates = "3.1.0"
predicates-core = "1.0.6"
serde_yaml = "0.9.30"
